<resources>
    <string name="app_name">The Movies</string>
    <string name="menu_tv">Tv</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_star">Star</string>
    <string name="network_error_message">통신에러 입니다.</string>
    <string name="last_paging_message">불러올 페이지가 없습니다.</string>
    <string name="release_date_text">Release Date : %s</string>
    <string name="trailers">Trailers</string>
    <string name="summary">Summary</string>
    <string name="reviews">Reviews</string>
    <string name="air_date_text">First Air Date : %s</string>
    <string name="popular_text">Popular</string>
    <string name="new_text">New!</string>
    <string name="menu_celebrities">Celebrities</string>
    <string name="movies">Movies</string>
    <string name="tv_program">Tv Program</string>
    <string name="transition_profile">transition_profile</string>
    <string name="search_movies">Search Movies</string>
</resources>