<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="io.github.slflfl12.presentation.model.MoviePresentationModel" />

        <variable
            name="vm"
            type="io.github.slflfl12.presentation.moviedetail.MovieDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_detail_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/trailers"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:visibilityByModel="@{vm.videoList}"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_video_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:bindVideoViewModel="@{vm}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:videos="@{vm.videoList}"
            tools:listitem="@layout/item_video"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{movie.overview}"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="요약" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_detail_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:visibility="gone"
            app:bindChipKeywords="@{vm.keywordList}"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="6dp"
            app:singleLine="false"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_detail_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reviews"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:visibilityByModel="@{vm.reviewList}"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_reviews"
            bindReviewViewModel="@{vm}"
            reviews="@{movie.reviews}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:visibility="visible" />
    </LinearLayout>
</layout>