<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="io.github.slflfl12.movieapp.ui.peopledetail.PeopleDetailActivity" />

        <variable
            name="vm"
            type="io.github.slflfl12.presentation.peopledetail.PeopleDetailViewModel" />

        <variable
            name="person"
            type="io.github.slflfl12.presentation.model.PersonPresentationModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_person_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:bindActivity="@{activity}"
            app:bindTitle="@{person.name}"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_person_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_person_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_person_profile"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="24dp"
                            android:transitionName="@string/transition_profile"
                            app:bindBackDrop="@{person}"
                            tools:src="@drawable/ic_star" />

                        <TextView
                            android:id="@+id/tv_person_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:text="@{person.name}"
                            android:textColor="@color/white"
                            android:textSize="23sp"
                            tools:text="Scarlett Johansson" />

                        <TextView
                            android:id="@+id/tv_person_biography"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:padding="10dp"
                            android:text="@{vm.personDetail.biography}"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/cg_person_known_for"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:padding="10dp"
                            android:visibility="gone"
                            app:bindKnownAs="@{vm.personDetail.alsoKnownAs}"
                            app:chipSpacingHorizontal="4dp"
                            app:chipSpacingVertical="8dp"
                            app:singleLine="false" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/movies"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:visibilityByModel="@{vm.personMovieList}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_person_detail_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:bindPersonMovieAdapterList="@{vm.personMovieList}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_person_movie"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_program"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:visibilityByModel="@{vm.personTvList}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_person_detail_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:bindPersonTvAdapterList="@{vm.personTvList}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_person_movie"
                    tools:visibility="visible" />


            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>